# farmaura

./: .dockerignore  .gitignore  agent.md  claude.md
farmaura-api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.gateway.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
farmaura-api/alembic/: env.py  script.py.mako
farmaura-api/alembic/versions/: 20260720_01_add_inventory_item_generic_flag.py  20260720_02_add_inventory_products.py  20260720_03_add_brand_category_therapeutic_class.py  20260720_04_widen_marketplace_image_url.py  20260720_05_add_invoice_tax_cost_icms_st.py  20260723_01_baseline_full_schema.py  20260723_02_add_purchase_quotes.py
farmaura-api/app/: __init__.py  main.py
farmaura-api/app/api/: __init__.py  deps.py  router.py
farmaura-api/app/core/: __init__.py  ai_json.py  cache.py  config.py  database.py  database_roles.py  device_detection.py  exceptions.py  file_storage.py  file_validation.py  idempotency.py  jwt.py  logging.py  login_guard.py  pagination.py  password_hashing.py  pricing.py  rate_limit.py  responses.py  row_level_security.py  security.py  tenant_context.py  token_fingerprints.py  two_factor.py  valkey_client.py
farmaura-api/app/domain/: __init__.py  enums.py  errors.py  permissions.py  validators.py
farmaura-api/app/models/: __init__.py  audit_event.py  base.py  brand.py  brand_supplier.py  order.py  (+57 more)
farmaura-api/docker/: entrypoint.sh
farmaura-api/scripts/: audit_dependencies.py  bootstrap_database.py  dev.py  docker_rebuild_web.sh  docker_up.sh  production_admin.py  seed.py
(+338 files in other folders)
