[project]
name = "farmaura-api"
version = "0.1.0"
description = "Production-oriented Python backend baseline for Farmaura."
readme = "README.md"
requires-python = "==3.13.13"
dependencies = [
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "PyJWT==2.13.0",
    "psycopg[binary]==3.3.4",
    "pwdlib[argon2]==0.3.0",
    "python-multipart==0.0.32",
    "redis==8.0.0",
    "sqlalchemy==2.0.50",
    "structlog==26.1.0",
    "uvicorn==0.47.0",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
